--- a/index.html
+++ b/index.html
@@ -1,47 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documen</title>
-    <link rel="stylesheet" href="./css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-</head>
-
-<body>
-
-    <header class="page-header">
+		<link rel="stylesheet" href="./css/styles.css">
+    </head>
+    <body>
+    <header>
         <nav>
-
-            <!--top_line-->
-            <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
-
-            <!--information_menu-->
-            <ul class="menu link">
-                <li><a class="link current" href="./index.html">Студія</a></li>
-                <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
-                <li><a class="link" href="#contacts">Контакти</a></li>
+            <!--!top_line-->
+                    <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
+        <!--!information_menu-->
+            <ul class="menu list">
+                    <li><a class="link current" href="./index.html">Студія</a></li>
+                    <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
+                    <li><a class="link" href="#contacts">Контакти</a></li>
+                    </ul>
+                    </nav>
+        <!--!contact-->
+                    <ul class="contact list">
+                    <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="link" href="tel:+380961111111">38 096 111 11 11</a></li>
             </ul>
-        </nav>
-
-        <!--contact-->
-        <ul class="contact list">
-            <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link" href="tel:+380961111111">38 096 111 11 11</a></li>
-        </ul>
-    </header>
-
-    <main>
-        <!--cap-->
-        <section class="cap">
+            </header>
+            <main>
+            <!--!cap-->
+            <section class="cap">
             <h1 class="cap-title">Ефективні рішення для вашого бізнесу</h1>
             <button class="button-order" type="button">Замовити послугу</button>
         </section>
-
-        <!--features-->
+            <!--!features-->
         <section class="section">
             <h2 class="section-title">Features</h2>
             <ul class="features list">
@@ -63,8 +55,7 @@
                 </li>
             </ul>
         </section>
-
-        <!--what_we_do-->
+            <!--!what_we_do-->
         <section class="section">
             <h2 class="section-title">Чим ми займаємося</h2>
             <ul class="work list">
@@ -79,8 +70,7 @@
                 </li>
             </ul>
         </section>
-
-        <!--our_company-->
+            <!--!our_company-->
         <section class="section">
             <h2 class="section-title">Наша команда</h2>
             <ul class="company list">
@@ -107,12 +97,11 @@
             </ul>
         </section>
     </main>
-
-    <!--dasement-->
+            <!--!dasement-->
     <footer class="footer">
         <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
         <address>
-            <a class="address-link" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.427058,30.5351338,18.25z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                <a class="address-link" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.427058,30.5351338,18.25z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
                 target="_blank" rel="noopener noreferrer"> м. Київ, пр-т Лесі Українки, 26</a>
             <ul class="contact-footer list">
                 <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
@@ -120,7 +109,5 @@
             </ul>
         </address>
     </footer>
-
-</body>
-
-</html>
+    </body>
+    </html>
