--- a/portfolio.html
+++ b/portfolio.html
@@ -1,27 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Documen</title>
-	<link rel="stylesheet" href="./css/styles.css">
-	<link
-		href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-		rel="stylesheet">
-    </head>
-    <body>
-	<header class="page-header">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"/>
+	<link rel="stylesheet" href="./css/styles.css"/>
+	</head>
+	<body>
+	<header>
 		<nav>
 				<!--top_line-->
 				<a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
 				<!--information_menu-->
-				<ul class="menu link">
+			<ul class="menu list">
 					<li><a class="link" href="./index.html">Студія</a></li>
 					<li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
 					<li><a class="link" href="#contacts">Контакти</a></li>
-				</ul>
+		</ul>
 		</nav>
 		<!--contact-->
 		<ul class="contact list">
@@ -33,8 +30,8 @@
 	<main>
 		<h1>Наші роботи</h1>
 		<section class="section">
-			<h2>Портфоліо</h2>
-    <!--!button-->
+		<h2>Портфоліо</h2>
+            <!--!button-->
 			<ul class="list">
 				<li><button class="button" type="button">Усі</button></li>
 				<li><button class="button" type="button">Веб-сайти</button></li>
@@ -46,64 +43,64 @@
 			<ul class="portfolio list">
 				<li>
 					<img src="./images/jpg7.jpg" alt="Технокряк" width="370" />
-					<h3 class="title">Технокряк</h3>
+					<h2 class="title">Технокряк</h2>
 					<p class="title-text">Веб-сайт</p>
 				</li>
 				<li>
 					<img src="./images/jpg8.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
-					<h3 class="title">Постер New Orlean vs Golden Star</h3>
+					<h2 class="title">Постер New Orlean vs Golden Star</h2>
 					<p class="title-text">Дизайн</p>
 				</li>
 				<li>
 					<img src="./images/jpg9.jpg" alt="Ресторан Seafood" width="370" />
-					<h3 class="title">Ресторан Seafood</h3>
+					<h2 class="title">Ресторан Seafood</h2>
 					<p class="title-text">Додаток</p>
 				</li>
 				<li>
 					<img src="./images/jpg10.jpg" alt="Проєкт Prime" width="370" />
-					<h3 class="title">Проєкт Prime</h3>
+					<h2 class="title">Проєкт Prime</h2>
 					<p class="title-text">Маркетинг</p>
 				</li>
 				<li>
 					<img src="./images/jpg11.jpg" alt="Проєкт Boxes" width="370" />
-					<h3 class="title">Проєкт Boxes</h3>
+					<h2 class="title">Проєкт Boxes</h2>
 					<p class="title-text">Додаток</p>
 				</li>
 				<li>
 					<img src="./images/jpg12.jpg" alt="Inspiration has no Borders" width="370" />
-					<h3 class="title">Inspiration has no Borders</h3>
+					<h2 class="title">Inspiration has no Borders</h2>
 					<p class="title-text">Веб-сайт</p>
 				</li>
 				<li>
 					<img src="./images/jpg13.jpg" alt="Видання Limited Edition" width="370" />
-					<h3 class="title">Видання Limited Edition</h3>
+					<h2 class="title">Видання Limited Edition</h2>
 					<p class="title-text">Дизайн</p>
 				</li>
 				<li>
 					<img src="./images/jpg14.jpg" alt="Проєкт LAB" width="370" />
-					<h3 class="title">Проєкт LAB</h3>
+					<h2 class="title">Проєкт LAB</h2>
 					<p class="title-text">Маркетинг</p>
 				</li>
 				<li>
 					<img src="./images/jpg15.jpg" alt="Growing Business" width="370" />
-					<h3 class="title">Growing Business</h3>
+					<h2 class="title">Growing Business</h2>
 					<p class="title-text">Додаток</p>
 				</li>
 			</ul>
-			</section>
+		</section>
 	</main>    
         <!--dasement-->
-        <footer class="footer">
+            <footer class="footer">
 	<a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
 		<address>
 				<a class="address-link"
 				href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.427058,30.5351338,18.25z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-					target="_blank" rel="noopener noreferrer"> м. Київ, пр-т Лесі Українки, 26</a>
-				<ul class="contact-footer list">
-					<li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+				target="_blank" rel="noopener noreferrer"> м. Київ, пр-т Лесі Українки, 26</a>
+			<ul class="contact-footer list">
+				<li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 			<li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-				</ul>
+			</ul>
 		</address>
-    </footer>
+            </footer>
     </body>
     </html>
