--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </head>
     <body>
     <header>
+		<div class="container-header">
         <nav>
     <!--!top_line-->
                     <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
@@ -26,15 +27,19 @@
                     <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li><a class="link" href="tel:+380961111111">38 096 111 11 11</a></li>
             </ul>
+			</div>
             </header>
             <main>
     <!--!cap-->
             <section class="cap">
+				<div class="container">
             <h1 class="cap-title">Ефективні рішення для вашого бізнесу</h1>
             <button class="button-order" type="button">Замовити послугу</button>
+			</div>
         </section>
     <!--!features-->
         <section class="section">
+			<div class="container">
             <h2 class="section-title">Features</h2>
             <ul class="features list">
                 <li>
@@ -54,9 +59,11 @@
                     <p class="title-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
+			</div>
         </section>
     <!--!what_we_do-->
         <section class="section">
+			<div class="container">
             <h2 class="section-title">Чим ми займаємося</h2>
             <ul class="work list">
                 <li>
@@ -69,9 +76,11 @@
                     <img src="./images/jpg2.png" alt="design" width="370">
                 </li>
             </ul>
+			</div>
         </section>
     <!--!our_company-->
         <section class="section">
+			<div class="container">
             <h2 class="section-title">Наша команда</h2>
             <ul class="company list">
                 <li>
@@ -95,10 +104,12 @@
                     <p class="title-text">UI Designer</p>
                 </li>
             </ul>
+			</div>
         </section>
     </main>
     <!--!dasement-->
     <footer class="footer">
+		<div class="container">
         <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
         <address>
                 <a class="address-link" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.427058,30.5351338,18.25z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
@@ -108,6 +119,7 @@
                 <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
+		</div>
     </footer>
     </body>
     </html>
