--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documen</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./css/modern-normalize.css">
 	<link rel="stylesheet" href="./css/styles.css">
     </head>
@@ -83,22 +83,22 @@
 			<div class="container">
             <h2 class="section-title">Наша команда</h2>
             <ul class="company list">
-                <li>
+                <li class="test">
                     <img src="./images/jpg3.jpg" alt="product_designer" width="270">
                     <h3 class="title">Ігор Дем'яненко</h3>
                     <p class="title-text">Product Designer</p>
                 </li>
-                <li>
+                <li class="test">
                     <img src="./images/jpg4.jpg" alt="frontend_developer" width="270">
                     <h3 class="title">Ольга Рєпіна</h3>
                     <p class="title-text">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="test">
                     <img src="./images/jpg5.jpg" alt="marketing" width="270">
                     <h3 class="title">Микола Тарасов</h3>
                     <p class="title-text">Marketing</p>
                 </li>
-                <li>
+                <li class="test">
                     <img src="./images/jpg6.jpg" alt="ui_designer" width="270">
                     <h3 class="title">Михайло Єрмаков</h3>
                     <p class="title-text">UI Designer</p>
